# pyTetris

./: .gitignore  CONVERSION.md  DecisionesTecnologicas.md  JS_README.md  ProcesoAnalisis.md  ProcesoDiseño.md  README.md  conversation-log.md  eslint.config.js  jest.config.js  lenguajes.md  modeloDelDominio.md  package-lock.json  package.json  pom.xml  pyproject.toml
PyTetris.NET/: .gitignore  PyTetris.sln
PyTetris.NET/src/PyTetris/: Program.cs
PyTetris.NET/src/PyTetris/Factories/: PieceFactory.cs
PyTetris.NET/src/PyTetris/Models/: Board.cs  Piece.cs  Position.cs
PyTetris.NET/src/PyTetris/Services/: ConsoleService.cs  TetrisGame.cs
PyTetris.NET/src/PyTetris/Views/: BoardView.cs  PieceView.cs
PyTetris.NET/tests/PyTetris.Tests/: PyTetris.Tests.csproj
PyTetris.NET/tests/PyTetris.Tests/Factories/: PieceFactoryTests.cs
PyTetris.NET/tests/PyTetris.Tests/Models/: BoardTests.cs  PieceTests.cs  PositionTests.cs
PyTetris.NET/tests/PyTetris.Tests/Services/: TetrisGameTests.cs
cpp_tetris/: .gitignore  CMakeLists.txt  README.md
cpp_tetris/docs/: conversion_log.md
cpp_tetris/include/tetris/: Board.h  BoardView.h  Console.h  Game.h  Piece.h  PieceFactory.h  PieceView.h  Position.h  Tetris.h
cpp_tetris/src/: Board.cpp  BoardView.cpp  Console.cpp  Game.cpp  Piece.cpp  PieceFactory.cpp  PieceView.cpp  Position.cpp  Tetris.cpp
cpp_tetris/tests/: CMakeLists.txt  test_Board.cpp  test_Piece.cpp  test_Position.cpp  test_main.cpp
docs/: CONTEXTO.md  CONVERSION.md  DecisionesTecnologicas.md  ProcesoAnalisis.md  ProcesoDiseño.md  ProcesoRequisitos.md  modeloDelDominio.md  valeLaPenaLaHerencia.md
haskell-tetris/: .gitignore  CONVERSION_DOCUMENTATION.md  README.md  install.sh  tetris.cabal
haskell-tetris/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-tetris/dist-newstyle/packagedb/ghc-9.12.2/: package.cache  tetris-1.0.0-inplace.conf
haskell-tetris/src/: Main.hs
haskell-tetris/src/Tetris/: Board.hs  Console.hs  Game.hs  Pieces.hs  Types.hs  Utils.hs
haskell-tetris/test/: Spec.hs
haskell-tetris/test/Tetris/: BoardSpec.hs  GameSpec.hs  PiecesSpec.hs  TypesSpec.hs
js-src/: board.js  boardView.js  console.js  index.js  piece.js  pieceFactory.js  pieceView.js  position.js  tetris.js
modelosUML/: CU01-iniciarPartida.puml  CU02-reiniciarPartida.puml  CU03-moverPieza.puml  CU04-rotarPieza.puml  CU05-acelerarCaida.puml  CU06-descenderPieza.puml  DiagramaAnalisis.puml  DiagramaCasosDeUso.puml  DiagramaCasosUso.puml  DiagramaDeContexto001-ActorJugador.puml  DiagramaDiseño.puml  DiagramaDiseñoMIN.puml  DiagramaSecuencia.puml  MdD.puml  ModeloDominio.puml
python_src/: __init__.py  board.py  board_view.py  console.py  game.py  piece.py  piece_factory.py  piece_view.py  position.py  tetris.py
rust_tetris/: .gitignore  CONVERSION_DOCS.md  Cargo.toml  README.md
rust_tetris/src/: board.rs  board_view.rs  console.rs  main.rs  piece.rs  piece_view.rs  position.rs  tetris.rs
src/: Board.java  Game.java  PieceFactory.java  PieceView.java  Tetris.java
src/main/java/: Board.java  BoardView.java  Piece.java
src/test/java/: BoardTest.java  ConsoleTest.java  PieceFactoryTest.java  PieceTest.java  PieceViewTest.java  PositionTest.java
test/: board.test.js  piece.test.js  pieceFactory.test.js  position.test.js
tests/: __init__.py  test_board.py  test_integration.py  test_piece.py  test_piece_factory.py  test_position.py
